--- a/index.html
+++ b/index.html
@@ -541,33 +541,33 @@
               <div class="testimonial-item">
                 <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Jone Deam</h3>
-                  <span>Fondor of Jalmori</span>
+                  <p>Always available to answer any questions. Very knowledgeable about the services they provide. Would recommend to anyone!</p>
+                  <h3>Jitendra Singh</h3>
+                  <span>Senior Engineer</span>
                 </div>
               </div>
               <div class="testimonial-item">
                 <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
+                  <p>It is a pleasure working with Will. He is extremely knowledgeable, business savvy, and positive. His approach to challenges and opportunities is innovative. He is highly productive and consistently delivers as promised.</p>
                   <h3>Oidila Matik</h3>
-                  <span>President Lexo Inc</span>
+                  <span>Senior Engineer</span>
                 </div>
               </div>
               <div class="testimonial-item">
                 <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
+                  <p>window and wall air conditioners to Pharma. 24-hour timers to improve your air conditioner’s accessibility and performance.</p>
                   <h3>Alex Dattilo</h3>
-                  <span>CEO Optima Inc</span>
+                  <span>Engineer</span>
                 </div>
               </div>
               <div class="testimonial-item">
                 <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
                 <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Paul Kowalsy</h3>
-                  <span>CEO & Founder</span>
+                  <p>Hey offer smart technology with professional installation along with energy audits to help them stay cool and save money.</p>
+                  <h3>Narendra Sisodiya</h3>
+                  <span>Engineer</span>
                 </div>
               </div>
             </div>
@@ -584,7 +584,7 @@
         <div class="section-header">          
           <h2 class="section-title">Recent Blog</h2>
           <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <p class="section-subtitle">Heating and air conditioning units are required to include information on their Energy Efficiency Ratio (EER). This is a ratio of the systems output (measured in British thermal units, or BTUs) to the energy input it needs to operate (measured in watts). This ratio tells you how efficiently the system uses energy; the higher the number, the more efficient the unit.</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
@@ -601,10 +601,10 @@
                   <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
                 </div>
                 <h3>
-                  <a href="single-post.html">How often should you tweet?</a>
+                  <a href="single-post.html">Built to federal standards</a>
                 </h3>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
+                  Since air conditioners are one of the worst environmental offenders, federal guidelines in the United States require air conditioners to have an efficiency rating of at least 13-SEER. This means they provide a specific amount of air conditioning for each unit of energy used. For a more efficient and cost-effective machine, look for an even higher SEER rating...
                 </p>
                 <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
               </div>
@@ -626,10 +626,10 @@
                   <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
                 </div>
                 <h3>
-                  <a href="single-post.html">Content is still king</a>
+                  <a href="single-post.html">Financial savings</a>
                 </h3>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
+                  Not only will having an efficient machine use less energy and meet federal and local guidelines, but energy efficiency also means cost savings to you. The energy savings generally translate into lower electricity bills, plus some states offer tax rebates for people who purchase new energy efficient systems and household appliances.
                 </p>
                 <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
               </div>
@@ -651,10 +651,10 @@
                   <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
                 </div> 
                 <h3>
-                  <a href="single-post.html">Social media at work</a>
+                  <a href="single-post.html">Return air diffusion</a>
                 </h3>
                 <p>
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... 
+                  Some HVAC systems are set up so as much air is circulated into the room as is circulated out, thus keeping temperature constant and air clean. Air circulation increases the ability of the unit to hold steady temperatures throughout your home or building.
                 </p>
                 <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
               </div>
